crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_add_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"add\", size_class: \"medium\", shape: vec![256], output: out, }"
---
KernelSnapshot {
    kernel: "add",
    size_class: "medium",
    shape: [
        256,
    ],
    output: [
        -0.809225,
        -0.931558,
        -0.854402,
        -0.974435,
        -0.888642,
        -0.264794,
        -0.555102,
        -0.213894,
        -1.261041,
        -0.362516,
        -1.236606,
        -1.743451,
        -0.554635,
        -1.065841,
        -1.203525,
        -1.587531,
        -1.124249,
        -1.737117,
        -1.476787,
        -1.31236,
        -1.574178,
        -1.938877,
        -1.945309,
        -1.040488,
        -0.911336,
        -1.409037,
        -1.253535,
        -1.545967,
        -1.560664,
        -1.407199,
        -1.367539,
        -0.837252,
        -1.894856,
        -0.999699,
        -1.294875,
        -1.233828,
        -1.105785,
        -0.517275,
        -0.841002,
        -1.048382,
        -0.543119,
        -1.271992,
        -1.446324,
        -0.777926,
        -1.34993,
        -1.725994,
        -1.182811,
        -1.924144,
        -0.789453,
        -1.732657,
        -1.813538,
        -1.491527,
        -1.36472,
        -1.011687,
        -1.09354,
        -0.883424,
        -1.509636,
        -0.443768,
        -1.012037,
        -0.866964,
        -0.468951,
        -0.672003,
        -0.898367,
        -0.740901,
        -1.443263,
        -0.556684,
        -0.86225,
        -1.284106,
        -1.217375,
        -0.80348,
        -0.72134,
        -1.510383,
        -1.045123,
        -1.216501,
        -0.552352,
        -0.862077,
        -1.38516,
        -1.054284,
        -1.475348,
        -1.356126,
        -0.596161,
        -0.675308,
        -1.083669,
        -1.549215,
        -1.334422,
        -0.228571,
        -0.283422,
        -0.265402,
        -0.892967,
        -1.090804,
        -0.924897,
        -1.56038,
        -0.634857,
        -0.977848,
        -1.17011,
        -1.588751,
        -1.277402,
        -0.685175,
        -0.580869,
        -1.312786,
        -0.992999,
        -1.156461,
        -0.926021,
        -1.13046,
        -1.132733,
        -0.810597,
        -1.371724,
        -0.965372,
        -0.937965,
        -0.976448,
        -0.802564,
        -0.980095,
        -0.295374,
        -1.407668,
        -0.71212,
        -0.424901,
        -0.97545,
        -0.700902,
        -1.13897,
        -1.415146,
        -1.121893,
        -1.310148,
        -1.276902,
        -0.677239,
        -0.767426,
        -1.173047,
        -0.471185,
        -0.314373,
        -1.598704,
        -1.647264,
        -1.101445,
        -1.038433,
        -0.991831,
        -0.759415,
        -0.899003,
        -0.652617,
        -1.062658,
        -1.152798,
        -0.772824,
        -1.503835,
        -1.418175,
        -0.700129,
        -0.893109,
        -0.595048,
        -1.182579,
        -0.845077,
        -1.378113,
        -1.044858,
        -0.705487,
        -1.240706,
        -1.48482,
        -1.041036,
        -0.801369,
        -0.318934,
        -1.47624,
        -1.367251,
        -0.469234,
        -1.305348,
        -1.010223,
        -0.559507,
        -0.027232,
        -0.784572,
        -1.125228,
        -1.403745,
        -0.837694,
        -0.884141,
        -0.480004,
        -1.720303,
        -0.973596,
        -1.245047,
        -1.046593,
        -1.496542,
        -1.078866,
        -1.535223,
        -0.666211,
        -1.939279,
        -0.980426,
        -0.601729,
        -1.162726,
        -0.919464,
        -0.374934,
        -0.785094,
        -0.99089,
        -1.097713,
        -1.428751,
        -1.607339,
        -1.177092,
        -0.973469,
        -0.203047,
        -1.412001,
        -1.681567,
        -1.27874,
        -0.438776,
        -1.135209,
        -1.769741,
        -1.562032,
        -1.007131,
        -1.395452,
        -0.553558,
        -0.856593,
        -0.909875,
        -1.263576,
        -1.209458,
        -0.966335,
        -0.988169,
        -0.377659,
        -0.189725,
        -0.743187,
        -1.049997,
        -0.90457,
        -0.921718,
        -0.929835,
        -1.993202,
        -1.151076,
        -1.24347,
        -0.730241,
        -1.133547,
        -0.796969,
        -0.962601,
        -0.478299,
        -0.666015,
        -1.755491,
        -1.304063,
        -1.508534,
        -0.356044,
        -1.5076,
        -1.234927,
        -0.941642,
        -1.088063,
        -1.268839,
        -0.789131,
        -1.130783,
        -0.617834,
        -1.027104,
        -1.739909,
        -0.182324,
        -0.678899,
        -1.355188,
        -0.718755,
        -0.56099,
        -0.231775,
        -0.762543,
        -1.231685,
        -0.354949,
        -0.378772,
        -0.936201,
        -0.683845,
        -0.820273,
        -0.749141,
        -1.446479,
        -0.985626,
        -1.946267,
        -0.891774,
        -1.402932,
        -1.362628,
        -0.577102,
    ],
}
