crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_config_add.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelConfig\n{\n    kernel: \"add\", work_group_size: 256, precision: \"f32\",\n    vectorisation_width: 8,\n}"
---
KernelConfig {
    kernel: "add",
    work_group_size: 256,
    precision: "f32",
    vectorisation_width: 8,
}
