crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_dot_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"dot\", size_class: \"medium\", shape: vec![1], output: out.to_vec(), }"
---
KernelSnapshot {
    kernel: "dot",
    size_class: "medium",
    shape: [
        1,
    ],
    output: [
        29.954441,
    ],
}
