crates/bitnet-kernels/tests/snapshots/gpu_snapshot_regression__snapshot_matmul_medium.snap
---
source: crates/bitnet-kernels/tests/gpu_snapshot_regression.rs
expression: "KernelSnapshot\n{ kernel: \"matmul\", size_class: \"medium\", shape: vec![m, n], output: out, }"
---
KernelSnapshot {
    kernel: "matmul",
    size_class: "medium",
    shape: [
        16,
        16,
    ],
    output: [
        8.478038,
        8.354628,
        8.007781,
        6.469446,
        7.210691,
        6.47172,
        7.593071,
        8.678673,
        7.27582,
        9.373597,
        7.690631,
        8.211391,
        7.080611,
        7.945571,
        7.793282,
        7.446204,
        10.777895,
        9.671497,
        9.100768,
        8.069407,
        8.952327,
        7.06443,
        8.102037,
        10.073398,
        8.43923,
        10.389465,
        9.328392,
        8.796106,
        8.793771,
        8.730083,
        9.743738,
        9.315726,
        8.24163,
        7.894581,
        7.360612,
        5.971943,
        7.453452,
        6.249896,
        7.102212,
        8.321657,
        7.600715,
        8.090899,
        7.48407,
        6.6846,
        6.891403,
        6.532326,
        8.118782,
        7.133477,
        8.920535,
        8.770934,
        7.920993,
        7.414259,
        7.541079,
        7.575458,
        6.752305,
        9.363358,
        7.511383,
        8.79949,
        7.889121,
        7.687818,
        7.292203,
        8.484814,
        8.224969,
        7.840423,
        10.323938,
        9.41299,
        8.87401,
        8.132792,
        8.205129,
        7.985907,
        8.019528,
        9.731578,
        8.12797,
        10.810887,
        9.195713,
        8.537694,
        8.186494,
        9.250437,
        9.602094,
        8.802914,
        11.450629,
        11.078377,
        9.45859,
        8.807468,
        10.047319,
        8.399265,
        9.009966,
        11.118249,
        9.840241,
        10.778534,
        10.20031,
        9.277052,
        9.310334,
        9.191019,
        11.397249,
        9.241675,
        7.794299,
        7.161797,
        7.52855,
        5.878107,
        6.668138,
        5.994302,
        5.769371,
        8.036365,
        7.197395,
        8.217471,
        6.871802,
        7.2061,
        6.831478,
        7.795738,
        6.91413,
        6.971457,
        9.196622,
        9.150703,
        8.352831,
        7.232464,
        7.255395,
        7.228059,
        7.605392,
        9.455623,
        8.253459,
        9.85146,
        8.123081,
        8.450169,
        7.716345,
        8.287418,
        8.461278,
        7.70642,
        8.229509,
        8.398751,
        7.778095,
        6.273074,
        6.727414,
        6.505232,
        6.620605,
        9.120958,
        7.434499,
        8.474517,
        7.122923,
        7.222729,
        6.808573,
        7.468951,
        8.185535,
        7.526133,
        8.253501,
        9.904518,
        8.393501,
        7.181707,
        7.371325,
        7.657861,
        7.692335,
        9.905102,
        8.617399,
        10.149844,
        8.252632,
        8.925003,
        7.145258,
        9.0358,
        9.551075,
        9.739786,
        9.033505,
        8.887091,
        8.148547,
        7.406317,
        7.587656,
        6.887864,
        7.328063,
        9.58516,
        8.111477,
        9.401133,
        8.109781,
        8.347602,
        7.658502,
        7.571225,
        8.563327,
        8.515837,
        12.197926,
        10.9753,
        10.2953,
        9.343817,
        10.570592,
        8.464735,
        9.210607,
        12.522245,
        9.700639,
        11.390816,
        10.595705,
        11.142777,
        9.000641,
        9.985662,
        10.754735,
        10.26754,
        9.801405,
        8.820806,
        8.562882,
        7.409245,
        8.422979,
        6.723964,
        7.92403,
        9.532582,
        8.624982,
        9.021012,
        8.878412,
        8.485394,
        7.402323,
        7.883756,
        8.653708,
        8.124392,
        10.024916,
        10.001311,
        8.894973,
        7.752946,
        8.433288,
        8.231215,
        8.039384,
        9.940251,
        9.849054,
        11.011096,
        9.678364,
        9.511156,
        8.062522,
        8.327862,
        9.539251,
        10.100498,
        10.327682,
        9.271441,
        9.736606,
        7.388509,
        9.071938,
        7.496904,
        8.246681,
        10.946521,
        9.106401,
        9.75759,
        8.791972,
        9.606759,
        8.39319,
        9.164367,
        9.51164,
        8.567261,
        9.331702,
        8.345499,
        9.427548,
        7.088707,
        8.297316,
        7.193455,
        7.936044,
        8.596192,
        7.582108,
        8.592583,
        8.330321,
        8.183153,
        7.868559,
        9.039025,
        8.799395,
        7.634658,
    ],
}
